Fixed div overlapping

--- a/Code/Banking_System_RIA/src/main/webapp/CSS/home.css
+++ b/Code/Banking_System_RIA/src/main/webapp/CSS/home.css
@@ -51,6 +51,7 @@ body {
 	width: 100%;
 	padding: 3%;
 	background-color: #50514F;
+	height: 150px;
 }
 .accounts_list::-webkit-scrollbar-track {
   padding: 2px 0;
